# Hexlet_pytest

hexlet_pytest/: pyproject.toml
hexlet_pytest/tests/: test_example.py  test_stack.py
