[project]
name = "hexlet-pytest"
version = "0.1.0"
description = "Test project for learning pytest"
readme = "README.md"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = ["pytest"]